# GProcessing2025

./: .gitignore  COMPLETE_GUIDE.md  CONTRIBUTORS.md  IMPROVEMENTS_SUMMARY.md  LICENSE  MANIFEST.in  NOTEBOOK_FIXES_SUMMARY.md  PROJECT_PRESENTATION.md  README.md  README.zh.md  SpatialSamplingPro.pptx  SpatialSamplingPro_En.pptx  USAGE_GUIDE.md  plan.zh.md  pyproject.toml  test_metadata_basic.py  test_notebook_fixes.py  test_performance.py  test_performance_simple.py  test_quick_fixes.py
.github/workflows/: code-quality.yml  test.yml
docs/: api_reference.md
docs/case_studies/: hong_kong_urban_green_space.md
docs/tutorials/: getting_started.md
examples/: README.md  advanced_sampling_comparison.ipynb  intro_to_svipro.ipynb  milan_reproducible_samples.geojson  road_samples_milan.geojson  samples.csv  samples.geojson  ssp_tutorial.ipynb
memory-bank/: CLAUDE.md  architecture.md  implementation-plan.md  progress.md  project-plan.md  tech-stack.md
scripts/: release.py
src/: __init__.py
src/ssp/: __init__.py  cli.py  exceptions.py
src/ssp/metadata/: __init__.py  exporter.py  models.py  serializer.py  validator.py
src/ssp/performance/: __init__.py  cache.py  chunking.py  parallel.py  progress.py
src/ssp/sampling/: __init__.py  base.py  grid.py  road_network.py
src/ssp/utils/: __init__.py  coordinates.py  edge_cases.py
src/ssp/visualization/: __init__.py  comparison.py
src/svipro/: __init__.py  cli.py  exceptions.py
src/svipro/metadata/: __init__.py  exporter.py  models.py  serializer.py  validator.py
src/svipro/performance/: __init__.py  cache.py  parallel.py  progress.py
src/svipro/sampling/: __init__.py  base.py  grid.py  road_network.py
src/svipro/utils/: __init__.py  edge_cases.py
src/svipro/visualization/: __init__.py  comparison.py
tests/: test_cli.py  test_edge_cases.py  test_exceptions.py  test_grid_sampling.py  test_metadata.py  test_road_network_coverage.py  test_road_network_sampling.py  test_sampling_base.py  test_visualization.py
