[project]
name = "ssp"
version = "0.1.0"
description = "SpatialSamplingPro: A Standardized Framework for Reproducible Spatial Sampling Design in Urban Studies"
authors = [
    {name = "Jiale Guo", email = "jiale.guo@mail.polimi.it"},
    {name = "Mingfeng Tang", email = "mingfeng.tang@mail.polimi.it"}
]
maintainers = [
    {name = "Jiale Guo", email = "jiale.guo@mail.polimi.it"},
    {name = "Mingfeng Tang", email = "mingfeng.tang@mail.polimi.it"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<3.14"
keywords = [
    "spatial-sampling",
    "sampling",
    "gis",
    "geospatial",
    "urban-studies",
    "reproducibility",
    "urban-research",
    "osm",
    "road-network",
    "grid-sampling",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "typing-extensions>=4.12.2",
    "future-annotations>=1.0.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "networkx>=3.1",
    "osmnx>=2.0.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "folium>=0.14.0",
    "pyproj>=3.6.0",
    "geojson>=3.1.0",
    "tqdm>=4.65.0",
]

[project.urls]
Homepage = "https://github.com/GuojialeGeographer/GProcessing2025"
Documentation = "https://github.com/GuojialeGeographer/GProcessing2025/blob/main/README.md"
Repository = "https://github.com/GuojialeGeographer/GProcessing2025"
Issues = "https://github.com/GuojialeGeographer/GProcessing2025/issues"

[project.scripts]
ssp = "ssp.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.2.1",
    "tox>=4.0.0",
    "ipywidgets>=8.1.5",
    "allure-pytest>=2.13.0",
    "ipykernel>=6.21.2",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "nbstripout>=0.6.1",
    "pydocstyle>=6.3.0",
    "pre-commit-hooks>=4.4.0",
    "snakeviz>=2.2.0",
    "pytest-mpl>=0.17.0",
    "questionary>=2.0,<3.0",
    "interrogate>=1.7.0",
]
docs = [
    "mkdocs>=1.4.2",
    "mike>=2.0.0",
    "mkdocs-material>=9.1.6",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-minify-plugin>=0.6.4",
    "mkdocs-redirects>=1.2.0",
    "mkdocs-awesome-pages-plugin>=2.8.0",
    "mkdocs-git-authors-plugin>=0.7.0",
    "mkdocstrings[python]>=0.24.0",
    "mkdocs-bibtex>=2.8.16",
    "mkdocs-macros-plugin>=0.7.0",
    "mkdocs-jupyter>=0.24.1",
    "mkdocs-callouts>=1.9.0",
    "mkdocs-glightbox>=0.3.2",
    "mkdocs-ezlinks-plugin>=0.1.14",
    "mkdocs-exclude>=1.0.2",
]
progress = [
    "tqdm>=4.65.0",
]
all = [
    "ssp[dev,docs,progress]",
]

[tool.poetry]
name = "ssp"
version = "0.1.0"
description = "SpatialSamplingPro: A Standardized Framework for Reproducible Spatial Sampling Design in Urban Studies"
authors = ["Jiale Guo <jiale.guo@mail.polimi.it>", "Mingfeng Tang <mingfeng.tang@mail.polimi.it>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ssp", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
typing-extensions = ">=4.12.2"
future-annotations = ">=1.0.0"
geopandas = ">=0.14.0"
shapely = ">=2.0.0"
numpy = ">=1.24.0"
pandas = ">=2.0.0"
scipy = ">=1.10.0"
scikit-learn = ">=1.3.0"
networkx = ">=3.1"
osmnx = ">=2.0.0"
pyyaml = ">=6.0"
click = ">=8.1.0"
matplotlib = ">=3.7.0"
seaborn = ">=0.12.0"
folium = ">=0.14.0"
pyproj = ">=3.6.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.1"
tox = ">=4.0.0"
ipywidgets = ">=8.1.5"
allure-pytest = ">=2.13.0"
ipykernel = ">=6.21.2"
flake8 = ">=6.0.0"
isort = ">=5.12.0"
nbstripout = ">=0.6.1"
pydocstyle = ">=6.3.0"
pre-commit-hooks = ">=4.4.0"
snakeviz = ">=2.2.0"
pytest-mpl = ">=0.17.0"
questionary = "~2"


[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.4.2"
mike = ">=2.0.0"
mkdocs-material = ">=9.1.6"
mkdocs-git-revision-date-localized-plugin = ">=1.2.0"
mkdocs-minify-plugin = ">=0.6.4"
mkdocs-redirects = ">=1.2.0"
mkdocs-awesome-pages-plugin = ">=2.8.0"
mkdocs-git-authors-plugin = ">=0.7.0"
mkdocstrings = {extras = ["python"], version = ">=0.24.0"}
mkdocs-bibtex = ">=2.8.16"
mkdocs-macros-plugin = ">=0.7.0"
mkdocs-jupyter = ">=0.24.1"
mkdocs-callouts = ">=1.9.0"
mkdocs-glightbox = ">=0.3.2"
mkdocs-ezlinks-plugin = ">=0.1.14"
mkdocs-exclude = ">=1.0.2"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.interrogate]
ignore-init-module = true
ignore-init-method = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-protected = false
fail-under = 80
verbose = true

[tool.flake8]
max-line-length = 79
max-complexity = 18
extend-ignore = [
    "E203",  # whitespace before ':'
    "E231",  # missing whitespace after ','
    "E266",  # too many leading '#' for block comment
    "E501",  # line too long
    "W503",  # line break before binary operator
    "F403",  # 'from module import *' used
    "F405",  # name may be undefined, or defined from star imports
    "F401",  # imported but unused
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
]
select = ["B", "C", "E", "F", "W", "T4", "B9"]
